# dvd-to-plex

./: .env.example  .gitignore  ISSUES.md  PRD-v1.md  PRD.md  pyproject.toml  verify_browser.py
docs/plans/: 2026-01-17-dvd-to-plex-design.md  2026-01-17-human-setup.md  2026-01-17-implementation-plan.md  2026-01-18-parallel-agent-cleanup-design.md  2026-01-18-parallel-agent-cleanup.md  2026-01-21-feature-batch-design.md  2026-01-21-feature-batch-plan.md  2026-01-21-manual-id-and-oversight.md  2026-01-22-google-sheets-sync-design.md  2026-01-22-google-sheets-sync-plan.md  2026-01-23-bluray-support-design.md  (+1 more)
launchd/: com.dvdtoplex.service.plist
scripts/: enrich_wishlist.py  install-service.sh  uninstall-service.sh
src/dvdtoplex/: __init__.py  (+12 more)
templates/: base.html
tests/: __init__.py  conftest.py  test_active_mode.py  test_application_lifecycle.py  test_collection.py  test_config.py  test_database.py  test_drive_watcher.py  test_drives.py  test_encode_queue.py  test_file_mover.py  test_fixtures.py  test_google_sheets.py  test_graceful_shutdown.py  test_handbrake.py  test_identifier.py  test_job_states.sh  test_main.py  test_makemkv.py  test_module_imports.py  test_notifications.py  test_oversight.py  test_plex_scanner.py  test_pushover_integration.py  test_rip_queue.py  test_sheets_sync.py  test_shutdown.py  test_skip_endpoint.py  test_tmdb.py  test_tmdb_integration.py  test_wanted.py  test_wanted_search.py  test_web.py  test_web_app.py  test_web_approve.py  test_web_archive.py  test_web_dashboard.py  test_web_identify.py  test_web_preidentify.py  test_web_skip.py  (+3 more)
(+18 files in other folders)
